--- a/src/components/ProductDetails/index.css
+++ b/src/components/ProductDetails/index.css
@@ -12,19 +12,6 @@
     font-size: 18px;
 }
 
-button {
-    border: none;
-    outline: 0;
-    display: inline-block;
-    padding: 8px;
-    color: white;
-    background-color: #4d4a4a;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-
 a {
     text-decoration: none;
     font-size: 22px;
@@ -34,4 +21,16 @@ a {
 button:hover,
 a:hover {
     opacity: 0.7;
+}
+
+.back {
+    border: none;
+    outline: 0;
+    display: inline-block;
+    color: white;
+    background-color: #4d4a4a;
+    text-align: center;
+    cursor: pointer;
+    width: 100%;
+    font-size: 20px;
 }
